--- a/semantico.html
+++ b/semantico.html
@@ -13,7 +13,7 @@
 
     <header>
         <nav class="container">
-            <span>LOGO</span>
+            <a href="#"><span>LOGO</span></a>
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Produtos</a></li>
