pacotes.html e contatohtml, preciso de fazer o css agora

--- a/semantico.html
+++ b/semantico.html
@@ -13,11 +13,11 @@
 
     <header>
         <nav class="container">
-            <a href="#"><span>LOGO</span></a>
+            <a href="/semantico.html"><span>LOGO</span></a>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="/semantico.html">Inicio</a></li>
+                <li><a href="/pages/pacote.html">Pacotes</a></li>
+                <li><a href="/pages/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
